Fix product cards spacing o solution

--- a/blocks/products/products.css
+++ b/blocks/products/products.css
@@ -27,7 +27,6 @@
   display: flex;
   flex-flow: column;
   max-width: 100%;
-  margin: 15px auto;
 }
 
 .product-card > * {
